Add Firebase configuration and update project settings; enhance sidenav and scripture components with active state styling

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,8 @@
     "endOfLine": "auto",
     "bracketSpacing": true,
     "useTabs": false,
-    "htmlWhitespaceSensitivity": "css",
+    "htmlWhitespaceSensitivity": "ignore",
+    "bracketSameLine": true,
     "arrowParens": "avoid",
     "overrides": [
       {
