--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -5,6 +5,7 @@
     {
       "name": "app",
       "installMode": "prefetch",
+      "updateMode": "prefetch",
       "resources": {
         "files": [
           "/favicon.ico",
@@ -31,7 +32,7 @@
     {
       "name": "from-api",
       "version": 1,
-      "urls": ["https://bible-api.com/"],
+      "urls": ["https://bible-api.com/data/**"],
       "cacheConfig": {
         "strategy": "freshness",
         "maxSize": 15,
