--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bible-api-client",
-  "version": "1.0.1-7",
+  "version": "1.0.1-8",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^19.0.6",
     "@angular/router": "^19.0.6",
     "@angular/service-worker": "^19.0.6",
+    "ngx-cookie-service": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
