--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -32,12 +32,12 @@
     {
       "name": "from-api",
       "version": 1,
-      "urls": ["https://bible-api.com/data/**"],
+      "urls": ["https://bible-api.com/data/*"],
       "cacheConfig": {
-        "strategy": "freshness",
-        "maxSize": 15,
-        "maxAge": "1h",
-        "timeout": "3s"
+        "strategy": "performance",
+        "maxSize": 9999,
+        "maxAge": "30d",
+        "timeout": "5s"
       }
     }
   ]
