--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bible-api-client",
-  "version": "1.0.2-0",
+  "version": "1.0.2-1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^19.1.3",
     "@angular/router": "^19.1.3",
     "@angular/service-worker": "^19.1.3",
+    "dexie": "^4.0.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
