--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
             "styles": [
               "src/styles.scss"
             ],
+            "sourceMap": false,
             "scripts": []
           },
           "configurations": {
@@ -57,7 +58,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -114,6 +121,7 @@
   "cli": {
     "schematicCollections": [
       "angular-eslint"
-    ]
+    ],
+    "analytics": false
   }
 }
