--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -32,7 +32,7 @@
     {
       "name": "from-api",
       "version": 1,
-      "urls": ["https://bible-api.com/data/*"],
+      "urls": ["https://bible-api.com/data/**"],
       "cacheConfig": {
         "strategy": "performance",
         "maxSize": 9999,
