--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bible-api-client",
-  "version": "1.0.2-11",
+  "version": "1.0.2-12",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,12 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.2.4",
-    "@angular/cdk": "^19.2.1",
+    "@angular/cdk": "^19.2.7",
     "@angular/common": "^19.2.4",
     "@angular/compiler": "^19.2.4",
     "@angular/core": "^19.2.4",
     "@angular/forms": "^19.2.4",
-    "@angular/material": "^19.2.1",
+    "@angular/material": "^19.2.7",
     "@angular/platform-browser": "^19.2.4",
     "@angular/platform-browser-dynamic": "^19.2.4",
     "@angular/router": "^19.2.4",
@@ -32,19 +32,19 @@
     "@angular/cli": "^19.2.5",
     "@angular/compiler-cli": "^19.2.4",
     "@types/jasmine": "~5.1.0",
-    "angular-eslint": "19.0.2",
-    "eslint": "^9.16.0",
+    "angular-eslint": "^19.0.2",
+    "eslint": "^9.23.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^5.2.5",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "prettier-eslint": "^16.3.0",
     "typescript": "~5.5.2",
-    "typescript-eslint": "8.18.0"
+    "typescript-eslint": "^8.18.0"
   }
 }
