--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bible-api-client",
-  "version": "1.0.2-12",
+  "version": "1.0.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
